Removed font, added reuse

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,10 +5,8 @@
         {% include head.html %}
 	</head>
 	<body>
-		<div id="container">
-			<div id="content">
-				{{ content }}
-			</div>
+		<div class="m-content">
+			{{ content }}
 		</div>
 	</body>
 </html>
