--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -34,13 +34,13 @@ a:active {
 * Content
 **********************************************************/
 
-.m-content {
+.content {
 	max-width: 700px;
 	padding-top: 30px;
 	padding-top: 40px;
 }
 
-.m-content h1 {
+.content h1 {
 	margin: 0 20px 20px;
 	font-size: 3em;
 	line-height: 1.2em;
@@ -48,12 +48,12 @@ a:active {
 }
 
 @media(min-width: 600px) {
-	.m-content h1 {
+	.content h1 {
 		font-size: 4.5em;
 	}
 }
 
-.m-content h2 {
+.content h2 {
 	margin: 0 20px 10px;
 	font-size: 2em;
 	line-height: 1.2em;
@@ -61,13 +61,13 @@ a:active {
 }
 
 @media(min-width: 600px) {
-	.m-content h2 {
+	.content h2 {
 		font-size: 2.3em;
 		margin-bottom: 15px;
 	}
 }
 
-.m-content h3 {
+.content h3 {
 	margin: 0 20px 10px;
 	font-size: 1.7em;
 	line-height: 1.2em;
@@ -75,13 +75,13 @@ a:active {
 }
 
 @media(min-width: 600px) {
-	.m-content h3 {
+	.content h3 {
 		font-size: 2em;
 		margin-bottom: 15px;
 	}
 }
 
-.m-content p {
+.content p {
 	margin: 0 20px 30px;
 	font-size: 1.8em;
 	line-height: 1.7em;
@@ -90,53 +90,53 @@ a:active {
 }
 
 @media(min-width: 600px) {
-	.m-content p {
+	.content p {
 		font-size: 2.2em;
 		margin-bottom: 45px;
 	}
 }
 
-.m-content ol,
-.m-content ul {
+.content ol,
+.content ul {
 	margin: 0 20px 35px 40px;
 }
 
 @media(min-width: 600px) {
-	.m-content ol,
-	.m-content ul {
+	.content ol,
+	.content ul {
 		margin-bottom: 45px;
 	}
 }
 
-.m-content ol li,
-.m-content ul li {
+.content ol li,
+.content ul li {
 	font-size: 1.6em;
 	line-height: 1.7em;
 	color: #fff;
 }
 
 @media(min-width: 600px) {
-	.m-content ol li,
-	.m-content ul li {
+	.content ol li,
+	.content ul li {
 		font-size: 2em;
 	}
 }
 
-.m-content blockquote {
+.content blockquote {
 	margin: 0 30px 35px;
 	font-style: italic;
 }
 
-.m-content blockquote cite {
+.content blockquote cite {
 	font-weight: bold;
 }
 
-.m-content p code {
+.content p code {
 	background: #222;
 	font-size: 1.3em;
 }
 
-.m-content pre {
+.content pre {
 	font-family: Monaco,'Courier New','Courier',monospace;
 	font-size: 1.9em;
 	background-color: #222;
@@ -150,7 +150,7 @@ a:active {
 }
 
 @media(min-width: 600px) {
-	.m-content pre {
+	.content pre {
 		font-size: 2.6em;
 		margin-bottom: 45px;
 	}
@@ -169,4 +169,15 @@ a:active {
 	.m-chapterNavigation {
 		font-size: 2em;
 	}
+}
+
+/**********************************************************
+* Warning
+**********************************************************/
+
+.warning {
+	padding: 30px 20px;
+	font-size: 1.6em;
+	background-color: #000;
+	color: yellow;
 }
