--- a/_includes/warning.html
+++ b/_includes/warning.html
@@ -1,3 +1,3 @@
 <div class="warning">
-	<p><strong>Warning:</strong> this website is under development so reading this now will be a waste of your time</p>
+	<p><strong>Warning:</strong> this website is under development so reading this now might be a waste of your time.</p>
 </div>
