--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12,13 +12,11 @@ body {
     text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
     font-size: 62.5%;
-    background-color: #006a6a;
-    color: #fff;
+
 }
 
 a:link,
 a:visited {
-	color: #fff;
 }
 
 a:hover,
@@ -27,7 +25,6 @@ a:focus {
 }
 
 a:active {
-	color: #fff;
 }
 
 /**********************************************************
@@ -35,7 +32,6 @@ a:active {
 **********************************************************/
 
 .content {
-	max-width: 700px;
 	padding-top: 30px;
 	padding-top: 40px;
 }
@@ -44,7 +40,7 @@ a:active {
 	margin: 0 20px 20px;
 	font-size: 3em;
 	line-height: 1.2em;
-	color: #fff;
+	max-width: 700px;
 }
 
 @media(min-width: 600px) {
@@ -57,7 +53,7 @@ a:active {
 	margin: 0 20px 10px;
 	font-size: 2em;
 	line-height: 1.2em;
-	color: #fff;
+	max-width: 700px;
 }
 
 @media(min-width: 600px) {
@@ -71,7 +67,7 @@ a:active {
 	margin: 0 20px 10px;
 	font-size: 1.7em;
 	line-height: 1.2em;
-	color: #fff;
+	max-width: 700px;
 }
 
 @media(min-width: 600px) {
@@ -85,8 +81,8 @@ a:active {
 	margin: 0 20px 30px;
 	font-size: 1.8em;
 	line-height: 1.7em;
-	color: #fff;
 	font-family: georgia;
+	max-width: 700px;
 }
 
 @media(min-width: 600px) {
@@ -100,6 +96,7 @@ a:active {
 .content ul {
 	margin: 0 20px 35px 40px;
 	font-family: georgia;
+	max-width: 700px;
 }
 
 @media(min-width: 600px) {
@@ -113,7 +110,6 @@ a:active {
 .content ul li {
 	font-size: 1.8em;
 	line-height: 1.7em;
-	color: #fff;
 }
 
 @media(min-width: 600px) {
@@ -126,6 +122,7 @@ a:active {
 .content blockquote {
 	margin: 0 30px 35px;
 	font-style: italic;
+	max-width: 700px;
 }
 
 .content blockquote cite {
@@ -133,14 +130,14 @@ a:active {
 }
 
 .content p code {
-	background: #222;
+	background: #e5e5e5;
 	font-size: 1.3em;
 }
 
 .content pre {
 	font-family: Monaco,'Courier New','Courier',monospace;
 	font-size: 1.9em;
-	background-color: #222;
+	background-color: #e5e5e5;
 	margin-bottom: 30px;
 	padding: 20px;
 	white-space: pre-wrap;       /* css-3 */
@@ -165,7 +162,6 @@ a:active {
 	padding: 30px 20px;
 	font-size: 1.6em;
 	overflow: hidden;
-	max-width: 660px;
 }
 
 @media(min-width: 600px) {
@@ -199,6 +195,6 @@ a:active {
 .warning {
 	padding: 30px 20px;
 	font-size: 1.6em;
-	background-color: #000;
-	color: yellow;
+	background-color: red;
+	color: fff;
 }
