Added header, nav, and pages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
         {% include head.html %}
 	</head>
 	<body>
+        {% include header.html %}
 		<div class="content">
 			{{ content }}
 		</div>
