--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -30,6 +30,40 @@ a:active {
 }
 
 /**********************************************************
+* Header
+**********************************************************/
+
+.header {
+	background-color: #eee;
+	padding: 20px;
+	overflow: hidden;
+}
+
+/**********************************************************
+* Logo
+**********************************************************/
+
+.logo {
+	font-size: 1.5em;
+	float: left;
+}
+
+/**********************************************************
+* Navigation
+**********************************************************/
+
+.navigation {
+	font-size: 1.5em;
+	float: right;
+}
+
+.navigation a {
+	float: left;
+	margin-left: 15px;
+	text-decoration: none;
+}
+
+/**********************************************************
 * Content
 **********************************************************/
 
@@ -161,8 +195,8 @@ a:active {
 **********************************************************/
 
 .chapterNavigation {
-	padding: 30px 20px;
-	font-size: 1.6em;
+	padding: 20px;
+	font-size: 1.5em;
 	overflow: hidden;
 	background-color: #39CCCC;
 }
@@ -174,21 +208,18 @@ a:active {
 }
 
 .chapterNavigation-allChapters {
-	float: left;
 }
 
 .chapterNavigation-nextPreviousWrapper {
-	float: right;
+	overflow: hidden;
 }
 
 .chapterNavigation-previous {
 	float: left;
-	padding-right: 5px;
 }
 
 .chapterNavigation-next {
-	float: left;
-	padding-left: 5px;
+	float: right;
 }
 
 /**********************************************************
