Updated cotent with benefits

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
 <div class="header">
-	<div class="logo">MaintainableCSS</div>
+	<div class="logo"><a href="/">MaintainableCSS</a></div>
 	{% include navigation.html %}
 </div>
