--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,4 +1,4 @@
 <div class="navigation">
-	<a class="{% if page.id == "home" %}nav-active{% endif%}" href="/">Home</a>
-	<a class="{% if page.id == "chapter" or page.layout == "chapter" %}nav-active{% endif%}" href="/chapters/">Chapters</a>
+	<a class="{% if page.id == "home" %}navigation-isActive{% endif%}" href="/">Home</a>
+	<a class="{% if page.id == "chapters" %}navigation-isActive{% endif%}" href="/chapters/">Chapters</a>
 </div>
