--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -30,6 +30,25 @@ a:active {
 }
 
 /**********************************************************
+* Footer
+**********************************************************/
+
+.footer {
+	background-color: #222;
+	padding: 20px;
+	overflow: hidden;
+}
+
+.footer p {
+	color: #fff;
+	font-size: 1.5em;
+}
+
+.footer a {
+	color: #fff;
+}
+
+/**********************************************************
 * Header
 **********************************************************/
 
