--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <div class="footer">
-	<p>Created by <a href="http://adamsilver.io">Adam Silver</a>, a UX engineer from London, UK.</p>
+	<p>Created by <a href="http://adamsilver.io">Adam Silver</a>, a UX designer and engineer from London, UK.</p>
 </div>
