--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -269,12 +269,79 @@ a.navigation-isActive {
 }
 
 /**********************************************************
-* Warning
+* Hero
 **********************************************************/
 
-.warning {
-	padding: 30px 20px;
-	font-size: 1.6em;
-	background-color: #FF4136;
-	color: fff;
+.hero {
+	padding-left: 20px;
+	padding-right: 20px;
+	padding-top: 50px;
+	padding-bottom: 50px;
+}
+
+@media(min-width: 600px) {
+	.hero {
+		padding-top: 140px;
+		padding-bottom: 140px;
+	}
+}
+
+.hero h1 {
+	text-align: center;
+	font-size: 3em;
+}
+
+@media(min-width: 600px) {
+	.hero h1 {
+		font-size: 5em;
+	}
+}
+
+.hero p {
+	text-align: center;
+}
+
+.hero-button {
+	border-radius: 30px;
+	border: 1px solid #bbb;
+	text-transform: uppercase;
+	text-decoration: none;
+	padding: 10px 30px;
+	font-size: 0.75em;
+	background-color: #f5f5f5;
+}
+
+/**********************************************************
+* Benefits
+**********************************************************/
+
+.benefits {
+	padding: 40px 20px;
+	background-color: #f5f5f5;
+	margin-bottom: 40px;
+}
+
+.benefits h2 {
+	text-align: center;
+	font-size: 2.5em;
+	margin-bottom: 60px;
+}
+
+@media(min-width: 600px) {
+	.benefits h2 {
+		font-size: 3em;
+	}
+}
+
+.benefit {
+
+}
+
+.benefit h3 {
+	text-align: center;
+}
+
+.benefit p {
+	text-align: center;
+	max-width: 500px;
 }
