--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -275,44 +275,63 @@ a.navigation-isActive {
 .hero {
 	padding-left: 20px;
 	padding-right: 20px;
-	padding-top: 25px;
+	padding-top: 50px;
 	padding-bottom: 50px;
+	background-color: #39CCCC;
 }
 
 @media(min-width: 600px) {
 	.hero {
-		padding-top: 140px;
+		padding-top: 150px;
 		padding-bottom: 140px;
 	}
 }
 
 .hero h1 {
-	text-align: center;
 	font-size: 3em;
+	line-height: 1.2em;
+	max-width: 700px;
+	margin-left: auto;
+	margin-right: auto;
+	padding: 0 20px 20px;
+	text-align: center;
 }
 
 @media(min-width: 600px) {
 	.hero h1 {
-		font-size: 5em;
+		font-size: 4.5em;
 	}
-}
-
-.hero h2 {
-	text-align: center;
 }
 
 .hero p {
 	text-align: center;
+	font-size: 1.8em;
+	line-height: 1.7em;
+	max-width: 700px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 30px;
+	padding: 0 20px 10px;
+}
+
+@media(min-width: 600px) {
+	.hero p {
+		font-size: 2.2em;
+	}
 }
 
 .hero-button {
 	border-radius: 30px;
-	border: 1px solid #bbb;
+	border: 1px solid #000;
 	text-transform: uppercase;
 	text-decoration: none;
 	padding: 10px 30px;
 	font-size: 0.75em;
-	background-color: #f5f5f5;
+	background-color: #f9f9f9;
+}
+
+.hero-button:hover {
+	background-color: #eee;
 }
 
 /**********************************************************
@@ -327,49 +346,98 @@ a.navigation-isActive {
 
 .benefits h2 {
 	text-align: center;
-	font-size: 2.5em;
-	margin-bottom: 60px;
+	font-size: 2.8em;
+	line-height: 1.2em;
+	max-width: 700px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 30px;
 }
 
 @media(min-width: 600px) {
 	.benefits h2 {
-		font-size: 3em;
+		font-size: 3.5em;
 	}
-}
-
-.benefit {
-
 }
 
 .benefit h3 {
 	text-align: center;
+	font-size: 2em;
+}
+
+@media(min-width: 600px) {
+	.benefits h3 {
+		font-size: 2.5em;
+	}
 }
 
 .benefit p {
 	text-align: center;
-	max-width: 500px;
+	text-align: center;
+	font-size: 1.8em;
+	line-height: 1.7em;
+	max-width: 700px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 30px;
+	padding: 0 20px 10px;
+}
+
+@media(min-width: 600px) {
+	.benefit p {
+		font-size: 2.2em;
+	}
 }
 
 .benefit-button {
 	border-radius: 30px;
-	border: 1px solid #bbb;
+	border: 1px solid #000;
 	text-transform: uppercase;
 	text-decoration: none;
 	padding: 10px 30px;
 	font-size: 0.75em;
-	background-color: #f5f5f5;
+	background-color: #fff;
+}
+
+.benefit-button:hover {
+	background-color: #eee;
 }
 
 /**********************************************************
 * Got question
 **********************************************************/
 
-.gotQuestion {}
-
 .gotQuestion h2 {
 	text-align: center;
+	font-size: 2.2em;
+	line-height: 1.2em;
+	max-width: 700px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 10px;
+	padding: 0 20px;
+}
+
+@media(min-width: 600px) {
+	.gotQuestion h2 {
+		font-size: 2.5em;
+		margin-bottom: 15px;
+	}
 }
 
 .gotQuestion p {
 	text-align: center;
+	font-size: 1.8em;
+	line-height: 1.7em;
+	max-width: 700px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 30px;
+	padding: 0 20px 10px;
+}
+
+@media(min-width: 600px) {
+	.gotQuestion p {
+		font-size: 2.2em;
+	}
 }
