--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -456,3 +456,23 @@ a.navigation-isActive {
 		font-size: 2.2em;
 	}
 }
+
+/**********************************************************
+* Chapter list
+**********************************************************/
+
+.chapterList {
+	background-color: #f5f5f5;
+	padding: 40px;
+}
+
+.chapterList-isCurrentPage {
+	padding-left: 5px;
+	font-weight: bold;
+}
+
+.chapterList ol {
+	max-width: 700px;
+	margin: 0 auto;
+	font-size: 1.5em;
+}
