Active styles for chap nav

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -263,6 +263,11 @@ a.navigation-isActive {
 	text-decoration: none;
 }
 
+.chapterNavigation-previous:active,
+.chapterNavigation-next:active {
+	color: #000;
+}
+
 /**********************************************************
 * Hero
 **********************************************************/
