--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,4 +1,5 @@
 <div class="navigation">
 	<a class="{% if page.id == "home" %}navigation-isActive{% endif%}" href="/">Home</a>
 	<a class="{% if page.id == "chapters" %}navigation-isActive{% endif%}" href="/chapters/">Chapters</a>
+	<a href="http://github.com/adamsilver/maintainablecss.com/">Github</a>
 </div>
