--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,24 +7,18 @@
 <meta property="og:description" content="{{ site.description }}">
 <meta property="og:url" content="{{ site.url }}{{ page.url | replace:'index.html',''}}">
 <meta property="og:site_name" content="MaintainableCSS">
+<meta property="og:image" content="{{ site.url }}/assets/img/maintainable.png">
+<meta property="og:image:width" content="430">
+<meta property="og:image:height" content="200">
+
 
 <meta name="twitter:card" content="summary">
 <meta name="twitter:description" content="{{ site.description }}">
 <meta name="twitter:title" content="{% if page.title %}{{ page.title }} - {% endif %} {{ site.name }}">
 <meta name="twitter:site" content="@adambsilver">
 <meta name="twitter:creator" content="@adambsilver">
-
 <meta itemprop="description" content="{{ site.description }}">
-
-<!--
-
-<meta property="og:image" content="http://www.theluckystrike.co.uk/wp-content/uploads/2012/02/mark-jenkins.jpg">
-<meta property="og:image:width" content="700">
-<meta property="og:image:height" content="340">
-
-<meta name="twitter:image" content="http://www.theluckystrike.co.uk/wp-content/uploads/2012/02/mark-jenkins.jpg" />
-
--->
+<meta property="twitter:image" content="{{ site.url }}/assets/img/maintainable.png">
 
 <link rel="stylesheet" href="/assets/css/main.css" type="text/css" media="all">
 
