--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -484,6 +484,11 @@ a.navigation-isActive {
 	}
 }
 
+.chapters-isCurrentPage {
+	padding-left: 5px;
+	font-weight: bold;
+}
+
 /**********************************************************
 * Got question
 **********************************************************/
@@ -523,34 +528,4 @@ a.navigation-isActive {
 	.gotQuestion p {
 		font-size: 2.2em;
 	}
-}
-
-/**********************************************************
-* Chapter list
-**********************************************************/
-
-.chapterList {
-	background-color: #f5f5f5;
-	padding: 40px;
-}
-
-.chapterList h2 {
-	max-width: 700px;
-	margin: 0 auto 20px;
-}
-
-.chapterList-isCurrentPage {
-	padding-left: 5px;
-	font-weight: bold;
-}
-
-.chapterList ol {
-	max-width: 700px;
-	margin: 0 auto;
-	font-size: 1.5em;
-}
-
-.chapterList li {
-	margin-left: 15px;
-	margin-bottom: 5px;
 }
