--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,20 +4,37 @@
 <meta property="og:locale" content="en_GB">
 <meta property="og:type" content="website">
 <meta property="og:title" content="{% if page.title %}{{ page.title }} - {% endif %} {{ site.name }}">
-<meta property="og:description" content="{{ site.description }}">
+
+{% if page.description %}
+	<meta property="og:description" content="{{ page.description }}">
+{% else %}
+	<meta property="og:description" content="{{ site.description }}">
+{% endif %}
+
 <meta property="og:url" content="{{ site.url }}{{ page.url | replace:'index.html',''}}">
 <meta property="og:site_name" content="MaintainableCSS">
 <meta property="og:image" content="{{ site.url }}/assets/img/maintainable.png">
 <meta property="og:image:width" content="430">
 <meta property="og:image:height" content="200">
 
-
 <meta name="twitter:card" content="summary">
-<meta name="twitter:description" content="{{ site.description }}">
+
+{% if page.description %}
+	<meta name="twitter:description" content="{{ page.description }}">
+{% else %}
+	<meta name="twitter:description" content="{{ site.description }}">
+{% endif %}
+
 <meta name="twitter:title" content="{% if page.title %}{{ page.title }} - {% endif %} {{ site.name }}">
 <meta name="twitter:site" content="@adambsilver">
 <meta name="twitter:creator" content="@adambsilver">
-<meta itemprop="description" content="{{ site.description }}">
+
+{% if page.description %}
+	<meta itemprop="description" content="{{ page.description }}">
+{% else %}
+	<meta itemprop="description" content="{{ site.description }}">
+{% endif %}
+
 <meta property="twitter:image" content="{{ site.url }}/assets/img/maintainable.png">
 
 <link rel="stylesheet" href="/assets/css/main.css" type="text/css" media="all">
