Favicon and maintainable asset

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,6 @@
 <div class="header">
-	<div class="logo"><a href="/">MaintainableCSS</a></div>
-	{% include navigation.html %}
+	<div class="header-inner">
+		<div class="logo"><a href="/">MaintainableCSS</a></div>
+		{% include navigation.html %}
+	</div>
 </div>
