--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12,12 +12,11 @@ body {
     text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
     font-size: 62.5%;
-
 }
 
 a:link,
 a:visited {
-	color: #000;
+	color: #001F3F;
 }
 
 a:hover,
@@ -26,7 +25,7 @@ a:focus {
 }
 
 a:active {
-	color: #f45b72;
+	color: #7FDBFF;
 }
 
 /**********************************************************
@@ -34,7 +33,7 @@ a:active {
 **********************************************************/
 
 .footer {
-	background-color: #222;
+	background-color: #001F3F;
 	padding: 20px;
 	overflow: hidden;
 }
@@ -58,7 +57,7 @@ a:active {
 **********************************************************/
 
 .header {
-	background-color: #222;
+	background-color: #fff;
 }
 
 .header-inner {
@@ -66,6 +65,12 @@ a:active {
 	padding: 20px;
 	max-width: 700px;
 	margin: 0 auto;
+}
+
+@media(min-width: 320px) {
+	.header-inner {
+		padding: 10px 20px;
+	}
 }
 
 /**********************************************************
@@ -79,18 +84,18 @@ a:active {
 	font-weight: bold;
 }
 
-@media(min-width: 400px) {
+@media(min-width: 320px) {
 	.logo {
 		float: left;
 		margin-bottom: 0;
 		font-size: 1.5em;
 		font-weight: normal;
+		margin-top: 1px;
 	}
 }
 
-.logo a {
-	text-decoration: none;
-	color: #f45b72;
+.logo a img {
+	border: none;
 }
 
 /**********************************************************
@@ -102,26 +107,33 @@ a:active {
 	text-align: center;
 }
 
-@media(min-width: 400px) {
+@media(min-width: 320px) {
 	.navigation {
 		float: right;
+		margin-top: 10px;
 	}
 }
 
 .navigation a {
-	margin-left: 7px;
-	margin-right: 7px;
+	margin-left: 3px;
+	margin-right: 3px;
 	text-decoration: none;
-	color: #fff;
+	color: #001F3F;
+}
+
+@media(min-width: 360px) {
+	.navigation a {
+		margin-left: 7px;
+		margin-right: 7px;
+	}
 }
 
 .navigation a:active {
-	color: #f45b72;
+	color: #7FDBFF;
 }
 
 a.navigation-isActive {
 	font-weight: bold;
-	color: #f45b72;
 }
 
 /**********************************************************
@@ -129,8 +141,8 @@ a.navigation-isActive {
 **********************************************************/
 
 .content {
-	padding-top: 30px;
 	padding-top: 40px;
+	padding-bottom: 1px;
 }
 
 .content h1 {
@@ -140,6 +152,7 @@ a.navigation-isActive {
 	margin-left: auto;
 	margin-right: auto;
 	padding: 0 20px 20px;
+	color: #001F3F;
 }
 
 @media(min-width: 600px) {
@@ -156,6 +169,7 @@ a.navigation-isActive {
 	margin-right: auto;
 	margin-bottom: 10px;
 	padding: 0 20px;
+	color: #001F3F;
 }
 
 @media(min-width: 600px) {
@@ -173,6 +187,7 @@ a.navigation-isActive {
 	margin-right: auto;
 	margin-bottom: 10px;
 	padding: 0 20px;
+	color: #001F3F;
 }
 
 @media(min-width: 600px) {
@@ -190,6 +205,7 @@ a.navigation-isActive {
 	margin-right: auto;
 	margin-bottom: 30px;
 	padding: 0 20px 10px;
+	color: #001F3F;
 }
 
 @media(min-width: 600px) {
@@ -206,6 +222,7 @@ a.navigation-isActive {
 	margin-right: auto;
 	margin-bottom: 30px;
 	padding: 0 20px 10px;
+	color: #001F3F;
 }
 
 @media(min-width: 600px) {
@@ -236,6 +253,7 @@ a.navigation-isActive {
 	margin-right: auto;
 	margin-bottom: 30px;
 	padding: 0 20px;
+	color: #001F3F;
 }
 
 .content blockquote cite {
@@ -245,12 +263,13 @@ a.navigation-isActive {
 .content p code {
 	background: #ddd;
 	font-size: 1.3em;
+	color: #001F3F;
 }
 
 .content pre {
 	font-family: Monaco,'Courier New','Courier',monospace;
 	font-size: 1.9em;
-	background-color: #DDDDDD;
+	background-color: #7FDBFF;
 	margin-bottom: 30px;
 	padding: 20px;
 	white-space: pre-wrap;       /* css-3 */
@@ -277,7 +296,7 @@ a.navigation-isActive {
 .chapterNavigation {
 	font-size: 1.5em;
 	overflow: hidden;
-	background-color: #f45b72;
+	background-color: #7FDBFF;
 }
 
 .chapterNavigation-inner {
@@ -313,7 +332,7 @@ a.chapterNavigation-next:active {
 	padding-right: 20px;
 	padding-top: 50px;
 	padding-bottom: 50px;
-	background-color: #F9D4DA;
+	background-color: #7FDBFF;
 }
 
 @media(min-width: 600px) {
@@ -321,6 +340,11 @@ a.chapterNavigation-next:active {
 		padding-top: 110px;
 		padding-bottom: 100px;
 	}
+}
+
+.hero img {
+	display: block;
+	margin: 0 auto 40px;
 }
 
 .hero h1 {
@@ -331,6 +355,8 @@ a.chapterNavigation-next:active {
 	margin-right: auto;
 	padding: 0 20px 20px;
 	text-align: center;
+	position: absolute;
+	left: -999em;
 }
 
 @media(min-width: 600px) {
@@ -362,8 +388,8 @@ a.chapterNavigation-next:active {
 	text-transform: uppercase;
 	text-decoration: none;
 	padding: 15px 70px;
-	font-size: 1.2em;
-	background-color: #222;
+	font-size: 1.3em;
+	background-color: #001F3F;
 	color: #ffffff;
 	font-weight: bold;
 	letter-spacing: 0.04em;
@@ -374,7 +400,8 @@ a.chapterNavigation-next:active {
 }
 
 .hero-button:hover {
-	background-color: #444;
+	background-color: #00162D;
+	color: #7FDBFF;
 }
 
 /**********************************************************
@@ -443,8 +470,8 @@ a.chapterNavigation-next:active {
 	text-transform: uppercase;
 	text-decoration: none;
 	padding: 15px 70px;
-	font-size: 1.2em;
-	background-color: #222;
+	font-size: 1.3em;
+	background-color: #001F3F;
 	color: #ffffff;
 	font-weight: bold;
 	letter-spacing: 0.04em;
@@ -455,7 +482,8 @@ a.chapterNavigation-next:active {
 }
 
 .benefit-readNowButton:hover {
-	background-color: #444;
+	background-color: #00162D;
+	color: #7FDBFF;
 }
 
 /**********************************************************
@@ -463,7 +491,7 @@ a.chapterNavigation-next:active {
 **********************************************************/
 
 .chapters {
-	background-color: #F9D4DA;
+	background-color: #7FDBFF;
 	padding-top: 40px;
 	padding-bottom: 40px;
 }
@@ -543,4 +571,8 @@ a.chapterNavigation-next:active {
 	.gotQuestion p {
 		font-size: 2.2em;
 	}
+}
+
+.chaptersContentWrapper {
+	background-color: #7FDBFF;
 }
