--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -421,6 +421,7 @@ a.chapterNavigation-next:active {
 	margin-left: auto;
 	margin-right: auto;
 	margin-bottom: 50px;
+	color: #001F3F;
 }
 
 @media(min-width: 600px) {
@@ -439,6 +440,7 @@ a.chapterNavigation-next:active {
 	text-align: center;
 	font-size: 2em;
 	margin-bottom: 7px;
+	color: #001F3F;
 }
 
 @media(min-width: 600px) {
@@ -456,6 +458,7 @@ a.chapterNavigation-next:active {
 	margin-right: auto;
 	margin-bottom: 30px;
 	padding: 0 20px 10px;
+	color: #001F3F;
 }
 
 @media(min-width: 600px) {
