--- a/_includes/head.html
+++ b/_includes/head.html
@@ -41,26 +41,7 @@
 
 <link rel="canonical" href="{{ site.url }}{{ page.url | replace:'index.html',''}}">
 
-<link rel="apple-touch-icon-precomposed" sizes="57x57" href="{{ site.url }}/apple-touch-icon-57x57.png" />
-<link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ site.url }}/apple-touch-icon-114x114.png" />
-<link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ site.url }}/apple-touch-icon-72x72.png" />
-<link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.url }}/apple-touch-icon-144x144.png" />
-<link rel="apple-touch-icon-precomposed" sizes="60x60" href="{{ site.url }}/apple-touch-icon-60x60.png" />
-<link rel="apple-touch-icon-precomposed" sizes="120x120" href="{{ site.url }}/apple-touch-icon-120x120.png" />
-<link rel="apple-touch-icon-precomposed" sizes="76x76" href="{{ site.url }}/apple-touch-icon-76x76.png" />
-<link rel="apple-touch-icon-precomposed" sizes="152x152" href="{{ site.url }}/apple-touch-icon-152x152.png" />
-<link rel="icon" type="image/png" href="{{ site.url }}/favicon-196x196.png" sizes="196x196" />
-<link rel="icon" type="image/png" href="{{ site.url }}/favicon-96x96.png" sizes="96x96" />
-<link rel="icon" type="image/png" href="{{ site.url }}/favicon-32x32.png" sizes="32x32" />
-<link rel="icon" type="image/png" href="{{ site.url }}/favicon-16x16.png" sizes="16x16" />
-<link rel="icon" type="image/png" href="{{ site.url }}/favicon-128.png" sizes="128x128" />
-<meta name="application-name" content="Some title"/>
-<meta name="msapplication-TileColor" content="#FFFFFF" />
-<meta name="msapplication-TileImage" content="{{ site.url }}/mstile-144x144.png" />
-<meta name="msapplication-square70x70logo" content="{{ site.url }}/mstile-70x70.png" />
-<meta name="msapplication-square150x150logo" content="{{ site.url }}/mstile-150x150.png" />
-<meta name="msapplication-wide310x150logo" content="{{ site.url }}/mstile-310x150.png" />
-<meta name="msapplication-square310x310logo" content="{{ site.url }}/mstile-310x310.png" />
+{% include favicon.html %}
 
 <link rel="author" href="https://plus.google.com/u/0/+AdamSilver1">
 
