--- a/_includes/share.html
+++ b/_includes/share.html
@@ -1,3 +1,3 @@
 <div class="share">
-	<a href="https://twitter.com/share?source=tweetbutton&text=&quot;{{page.title}}&quot;&via=adambsilver&url={{site.url}}{{page.url}}&hashtags=css">Share on Twitter</a>
+	<a class="share-button" href="https://twitter.com/share?source=tweetbutton&text=MaintainableCSS&mdash;an approach to writing modular and maintainable CSS&via=adambsilver&url={{site.url}}&hashtags=css,guidelines,">Share on Twitter</a>
 </div>
