--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -602,6 +602,8 @@ a.chapterNavigation-next:active {
 
 .share {
 	padding-bottom: 60px;
+	padding-left: 20px;
+	padding-right: 20px;
 	max-width: 700px;
 	margin: 0 auto;
 }
