--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -342,25 +342,31 @@ a.chapterNavigation-next:active {
 .hero {
 	padding-left: 20px;
 	padding-right: 20px;
-	padding-top: 50px;
+	padding-top: 30px;
 	padding-bottom: 50px;
 	background-color: #7FDBFF;
+	background-color: #001F3F;
 }
 
 @media(min-width: 600px) {
 	.hero {
-		padding-top: 110px;
-		padding-bottom: 100px;
+		padding-top: 60px;
+		padding-bottom: 90px;
 	}
 }
 
-.hero img {
+.hero-logo {
 	display: block;
-	margin: 0 auto 40px;
-	max-width: 350px;
-	min-width: 250px;
-	width: 100%;
-	height: auto;
+	margin: 0 auto 30px;
+	height: 180px;
+	width: 180px;
+}
+
+@media(min-width: 500px) {
+	.hero-logo {
+		width: 250px;
+		height: 250px;
+	}
 }
 
 .hero h1 {
@@ -373,6 +379,7 @@ a.chapterNavigation-next:active {
 	text-align: center;
 	position: absolute;
 	left: -999em;
+	color: #fff;
 }
 
 @media(min-width: 600px) {
@@ -385,11 +392,12 @@ a.chapterNavigation-next:active {
 	text-align: center;
 	font-size: 1.8em;
 	line-height: 1.7em;
-	max-width: 700px;
+	max-width: 620px;
 	margin-left: auto;
 	margin-right: auto;
 	margin-bottom: 30px;
 	padding: 0 20px 10px;
+	color: #fff;
 }
 
 @media(min-width: 600px) {
@@ -405,8 +413,8 @@ a.chapterNavigation-next:active {
 	text-decoration: none;
 	padding: 15px 70px;
 	font-size: 1.3em;
-	background-color: #001F3F;
-	color: #ffffff;
+	background-color: #7FDBFF;
+	color: #00162D;
 	font-weight: bold;
 	letter-spacing: 0.04em;
 	width: 100px;
@@ -416,8 +424,7 @@ a.chapterNavigation-next:active {
 }
 
 .hero-button:hover {
-	background-color: #00162D;
-	color: #7FDBFF;
+	color: #fff;
 }
 
 /**********************************************************
