--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,7 +13,7 @@
 
 <meta property="og:url" content="{{ site.url }}{{ page.url | replace:'index.html',''}}">
 <meta property="og:site_name" content="MaintainableCSS">
-<meta property="og:image" content="{{ site.url }}/assets/img/card.png">
+<meta property="og:image" content="{{ site.url }}/assets/img/card.png?v=1">
 <meta property="og:image:width" content="118">
 <meta property="og:image:height" content="118">
 
