typo in twitter share

--- a/_includes/share.html
+++ b/_includes/share.html
@@ -1,3 +1,3 @@
 <div class="share">
-	<a class="share-button" href="https://twitter.com/share?hashtags=css&amp;text=MaintainableCSS&mdash;an approach to writing modular, scalable and maintainable stylehseets.&amp;via=adambsilver&url={{site.url}}">Share on Twitter</a>
+	<a class="share-button" href="https://twitter.com/share?hashtags=css&amp;text=MaintainableCSS&mdash;an approach to writing modular, scalable and maintainable CSS.&amp;via=adambsilver&url={{site.url}}">Share on Twitter</a>
 </div>
